argoCD/argocd-ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argo-cd
spec:
  defaultBackend:
    service:
      name: argocd-service-port
      port:
        number: 8080

# ---
# apiVersion: networking.k8s.io/v1
# kind: Ingress
# metadata:
#   name: ingress
#   # namespace: argo-cd
#   annotations:
#     # kubernetes.io/ingress.class: ingress-nginx
#     # nginx.ingress.kubernetes.io/enable-cors: "true"
#     # nginx.ingress.kubernetes.io/cors-allow-origin: '$http_origin'
#     # nginx.ingress.kubernetes.io/ssl-redirect: "true"
#     nginx.ingress.kubernetes.io/rewrite-target: /
#     # nginx.ingress.kubernetes.io/rewrite-target: /$1
#     # nginx.ingress.kubernetes.io/use-regex: "true"
#     # nginx.ingress.kubernetes.io/backend-protocol: "HTTP"
# spec:
#   ingressClassName: nginx
#   rules:
#   - http:
#       paths:
#       - path: /(/|$)(.*)
#         pathType: Prefix
#         backend:
#           service:
#             name: argocd-service-port
#             port:
#               number: 8080
